--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-/self/
+/.self/
+/.doc/
+
 
 ### STS ###
 .apt_generated
